namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: blue-green
  labels:
    k8s: blue-green
