service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginxsvc
  namespace: blue-green
  labels:
    app: nginx
    k8s: blue-green
spec:
  type: ClusterIP
  ports:
  - port: 80
    name: http
  selector:
    app: nginx
