des-rule.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nginx
  namespace: blue-green
spec:
  host: nginx
  subsets:
  - name: v1
    labels:
      version: blue
  - name: v2
    labels:
      version: green
