virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx
  namespace: blue-green
spec:
  hosts:
  - "*"
  gateways:
  - app-gateway
  http:
    - route:
      - destination:
          host: nginxsvc
          subset: v1
        weight: 50
      - destination:
          host: nginxsvc
          subset: v2
        weight: 50
